# cognitive-deadlift

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CATALOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  GEMINI.md  LICENSE-CONTENT  Makefile  NOTICE  README.md  SECURITY.md  gemini-extension.json  productionization-report.md  pyproject.toml  repo-audit.md  skills_index.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.gemini/: README.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  hook_request.md  skill_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  security.yml  validate.yml
context-packs/: README.md  bugfix.yaml  refactor.yaml  repo-review.yaml  risky-change.yaml
docs/: ai-slop-taxonomy.md  architecture.md  interview-notes.md  layout-study.md  licensing.md  linting-testing-standards.md  paid-offer.md  research-brief.md  review-checklist.md  roadmap.md  security-notes.md  skill-atrophy-taxonomy.md  skill-quality.md  skill-standard.md  workflow-audit.md
harnesses/: README.md
hooks/: pre-commit
policies/: thinking-budget.yaml
scripts/: cognitive_deadlift_check.py  contract_yaml.py  doctor.py  grade_skills.py  security_scan.py  validate_context_packs.py  validate_harnesses.py  validate_policies.py  validate_repo.py  validate_skills.py
specs/: cognitive-deadlift-v2-modernization.md  public-portfolio-repo-review.md
tests/: test_contract_artifacts.py  test_validate_repo.py  test_validate_skills.py
(+82 files in other folders)
