[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-deadlift"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]
lint = [
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools]
packages = []
py-modules = []
